--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,59 @@
-body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
-}
-
-ol, ul {
-  padding-left: 30px;
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font: 14px "Century Gothic", Futura, sans-serif;
 }
 
 .board-row:after {
-  clear: both;
-  content: "";
-  display: table;
+    clear: both;
+    content: "";
+    display: table;
 }
 
 .status {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 72px; /* 24px -> 72px */
-  font-weight: bold;
-  line-height: 102px; /* 34px -> 102px */
-  height: 102px; /* 34px -> 102px */
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 102px; /* 34px -> 102px */
+    background: #fff;
+    border: 1px solid #999;
+    float: left;
+    font-size: 72px; /* 24px -> 72px */
+    font-weight: bold;
+    line-height: 102px; /* 34px -> 102px */
+    height: 102px; /* 34px -> 102px */
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 102px; /* 34px -> 102px */
 }
 
 .square:focus {
-  outline: none;
+    outline: none;
 }
 
 .kbd-navigation .square:focus {
-  background: #ddd;
+    background: #ddd;
 }
 
 .game {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .game-info {
-  margin-left: 20px;
+    margin-left: 20px;
 }
 
 button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 16px;
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
 }
